<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.actionCartingEnvironmental.action.view.TopView
                android:id="@+id/topview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_view_height"
                app:titleText="@string/email_communication"
        />
        <com.actionCartingEnvironmental.action.view.AlarmView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mainText="@string/action_newsletter"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/small_margin_size"
                app:description="@string/news_announcements"
        />
        <com.actionCartingEnvironmental.action.view.AlarmView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mainText="@string/weather_updates"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/small_margin_size"
                app:description="@string/delays_cancellations"
        />
        <com.actionCartingEnvironmental.action.view.AlarmView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mainText="@string/holiday_reminders"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/small_margin_size"
                app:description="@string/no_collections_holidays"
        />
    </LinearLayout>
</ScrollView>