<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.service.BulkPickUpActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.actionCartingEnvironmental.action.view.TitleView
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_view_height"
                app:title="@string/bulk_pickup_request"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/site"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <com.actionCartingEnvironmental.action.view.ServiceSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_margin="@dimen/small_margin_size"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/requested_pickup_date"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <com.actionCartingEnvironmental.action.view.ServiceSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_margin="@dimen/small_margin_size"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/site_contact"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                style="@style/BorderInputText"
                android:layout_margin="@dimen/small_margin_size"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/site_contact_phone"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                style="@style/BorderInputText"
                android:layout_margin="@dimen/small_margin_size"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/po_number"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <com.actionCartingEnvironmental.action.view.ServiceSpinner
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_margin="@dimen/small_margin_size"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/description_tems"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/area_view_height"
                style="@style/BorderInputText"
                android:layout_margin="@dimen/small_margin_size"/>

        <TextView
                android:id="@+id/done"
                android:layout_width="match_parent"
                style="@style/ButtonView"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/submit_request"
                android:layout_height="@dimen/item_view_height"
                android:layout_margin="@dimen/small_margin_size"/>
    </LinearLayout>
</ScrollView>