<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".activity.account.AccountActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.actionCartingEnvironmental.action.view.TitleView
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_view_height"
                app:title="@string/account_settings"
        />
        <com.actionCartingEnvironmental.action.view.AccountItem
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/top_view_margin_size"
                app:text="@string/notifications"
                app:image="@drawable/img_notification"
        />
        <com.actionCartingEnvironmental.action.view.AccountItem
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/small_margin_size"
                app:text="@string/email_communication"
                app:image="@drawable/img_email"
        />
        <com.actionCartingEnvironmental.action.view.AccountItem
                android:id="@+id/personal_information"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/small_margin_size"
                app:text="@string/personal_information"
                app:image="@drawable/personal_info"
        />
        <com.actionCartingEnvironmental.action.view.AccountItem
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/small_margin_size"
                app:text="@string/change_password"
                app:image="@drawable/img_password"
        />
        <com.actionCartingEnvironmental.action.view.AccountItem
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                android:layout_marginStart="@dimen/small_margin_size"
                android:layout_marginEnd="@dimen/small_margin_size"
                android:layout_marginTop="@dimen/small_margin_size"
                app:text="@string/logout"
                app:image="@drawable/img_logout"
        />
    </LinearLayout>
    <include layout="@layout/include_address_form"/>
</FrameLayout>