<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <com.actionCartingEnvironmental.action.view.TopView
                android:id="@+id/topview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/bar_view_height"
                app:titleText="@string/change_password"
        />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/current_password"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                style="@style/BorderInputText"
                android:layout_margin="@dimen/small_margin_size"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/new_password"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                style="@style/BorderInputText"
                android:layout_margin="@dimen/small_margin_size"/>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/DescriptionView"
                android:text="@string/new_password_again"
                android:layout_marginTop="@dimen/small_margin_size"
                android:layout_marginStart="@dimen/small_margin_size"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/item_view_height"
                style="@style/BorderInputText"
                android:layout_margin="@dimen/small_margin_size"/>
    </LinearLayout>
    <TextView
            android:id="@+id/done"
            android:layout_width="match_parent"
            style="@style/ButtonView"
            android:backgroundTint="@color/colorPrimary"
            android:layout_alignParentBottom="true"
            android:text="@string/save_changes"
            android:layout_height="@dimen/item_view_height"
            android:layout_margin="@dimen/small_margin_size"/>
</RelativeLayout>